--- a/style.css
+++ b/style.css
@@ -192,12 +192,72 @@
     background: #4F9DA6;
 }
 
-footer{
+.Get_My_Updates{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding: 60px 20px;
+    background: #FFF4D6;
+}
+
+.Get_My_Updates h1{
+    color: #121212;
+    font-size: 35px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.Get_My_Updates p{
+    color: #707070;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+
+form{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+#email-input{
+    width: 450px;
+    max-width: 100%;
+    color: #344966;
+    text-align: left;
+    font-weight: 500;
+    border-radius: 2px;
+    border: 0px;
+    padding: 15px 0px 15px 20px;
+    font-size: 14px;
+    background: #D9D9D9;
+}
+
+#Subscribe-button{
+    border: 0px;
+    width: 150px;
+    max-width: 100%;
+    font-size: 700;
+    padding: 15px;
+    font-size: 14px;
+    color: #f0f4ef;
+    background: #FF5959;
+    cursor: pointer;
+    border-radius: 0px 2px 2px 0px;
+    outline: 0;
+}
+
+footer {
     background: #0B0D17;
     height: auto;
     width: 100%;
     padding-top: 40px;
     color: #FAFAFA;
+    margin-top: 80px;
 }
 
 .footer-content{
